RESOLVED FIXED117268
REGRESSION (r148713): Crash under waitForDidUpdateInWindowState
https://bugs.webkit.org/show_bug.cgi?id=117268
Summary REGRESSION (r148713): Crash under waitForDidUpdateInWindowState
Tim Horton
Reported 2013-06-05 11:58:03 PDT
Anders thinks we need an isValid. I also noticed that we're not clearing m_waitingForDidUpdateInWindowState if the WebProcess quits. <rdar://problem/13822353> Null deref: CoreIPC::Connection::waitForMessage(CoreIPC::StringReference, CoreIPC::StringReference, unsigned long long, double) + 0x47 bool CoreIPC::Connection::waitForAndDispatchImmediately<Messages::WebPageProxy::DidUpdateInWindowState>(unsigned long long, double) + 0x37
Attachments
patch (1.66 KB, patch)
2013-06-05 12:00 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2013-06-05 12:00:36 PDT
Tim Horton
Comment 2 2013-06-05 12:42:07 PDT
Note You need to log in before you can comment on or make changes to this bug.