REGRESSION (r148713): Crash under waitForDidUpdateInWindowState https://bugs.webkit.org/show_bug.cgi?id=117268 <rdar://problem/13822353>

Reviewed by Anders Carlsson.

Check if the WebProcess is valid before waiting for a message from it.
Reset the bool that tells us that we have an outstanding didUpdateInWindowState message if the WebProcess quits.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::waitForDidUpdateInWindowState):
(WebKit::WebPageProxy::resetStateAfterProcessExited):


Canonical link: https://commits.webkit.org/135513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151234 268f45cc-cd09-0410-ab3c-d52691b4dbfc